# autoqrels

./: .gitignore  CITATION.cff  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: style.yml  test.yml
autoqrels/: __init__.py  _ir_measures_integration.py  _qrels_cache.py  labeler.py  text.py
autoqrels/oneshot/: __init__.py  duoprompt.py  duot5.py  maxrep.py  oneshot_labeler.py
autoqrels/pt_docs/: index.rst
autoqrels/zeroshot/: __init__.py  gradedmonoprompt.py  zeroshot_labeler.py
repro/oneshot/: README.md  compute_scores.py  dl19.bm25-firstrel.qrels  dl20.bm25-firstrel.qrels  dl21.bm25-firstrel.qrels  download_trec_runs.sh  figure1.ipynb  figure1.py  filter.py  table2.py
tests/: test_basic.py  test_qrels_cache.py
